globus-gssapi-gsi (13.0-1+gt6.@distro@) @distro@; urgency=low

  * Add SNI vhost cred dir support
  * Add optional ALPN processing

 -- Globus Toolkit <support@globus.org>  Tue, 05 Sep 2017 14:38:00 -0400

globus-gssapi-gsi (12.17-1+gt6.@distro@) @distro@; urgency=low

  * Fix indicate_mechs_test when using openssl v1.1.0
  * update to debhelper 9

 -- Globus Toolkit <support@globus.org>  Wed, 21 Jun 2017 13:21:04 -0400

globus-gssapi-gsi (12.16-1+gt6.@distro@) @distro@; urgency=low

  * Address test issues: fix .srl dependency, reuse credential
    in thread test

 -- Globus Toolkit <support@globus.org>  Thu, 27 Apr 2017 08:43:15 -0400

globus-gssapi-gsi (12.15-2+gt6.@distro@) @distro@; urgency=low

  * Remove legacy SSLv3 support

 -- Globus Toolkit <support@globus.org>  Fri, 21 Apr 2017 14:23:04 -0400

globus-gssapi-gsi (12.14-1+gt6.@distro@) @distro@; urgency=low

  * Merge "Don't unlock unlocked mutex #91". Add Test case.

 -- Globus Toolkit <support@globus.org>  Mon, 20 Mar 2017 11:17:53 -0400

globus-gssapi-gsi (12.13-1+gt6.@distro@) @distro@; urgency=low

  * Skip mech v1 tests for OpenSSL >= 1.1.0

 -- Globus Toolkit <support@globus.org>  Mon, 19 Dec 2016 09:48:41 -0500

globus-gssapi-gsi (12.12-1+gt6.@distro@) @distro@; urgency=low

  * More updates for mech negotiation

 -- Globus Toolkit <support@globus.org>  Tue, 08 Nov 2016 14:14:26 -0500

globus-gssapi-gsi (12.11-1+gt6.@distro@) @distro@; urgency=low

  * Fix function arg mismatch

 -- Globus Toolkit <support@globus.org>  Mon, 24 Oct 2016 15:54:34 -0400

globus-gssapi-gsi (12.10-1+gt6.@distro@) @distro@; urgency=low

  * Add support for new mech oid for different MIC formats

 -- Globus Toolkit <support@globus.org>  Fri, 21 Oct 2016 13:27:10 -0400

globus-gssapi-gsi (12.9-1+gt6.@distro@) @distro@; urgency=low

  * Fix bad index references

 -- Globus Toolkit <support@globus.org>  Wed, 21 Sep 2016 13:29:32 -0400

globus-gssapi-gsi (12.8-1+gt6.@distro@) @distro@; urgency=low

  * Fix hash detection
