@@ -58,7 +58,6 @@ init_no_client_sni(void)
     bool                                result = true;
     int                                 name_equal = false;
     OM_uint32                           ignore_minor_status = 0;
-    const char                         *why = "";
 
     major_status = gss_set_sec_context_option(
             &minor_status,
@@ -71,7 +70,6 @@ init_no_client_sni(void)
             });
     if (major_status != GSS_S_COMPLETE)
     {
-        why = "gss_set_sec_context_option";
         result = false;
 
         goto fail;
@@ -99,7 +97,6 @@ init_no_client_sni(void)
 
         if (GSS_ERROR(major_status))
         {
-            why = "gss_init_sec_context";
             result = false;
             break;
         }
@@ -124,7 +121,6 @@ init_no_client_sni(void)
 
             if (GSS_ERROR(major_status))
             {
-                why = "accept_sec_context";
                 result = false;
             }
         }
@@ -145,7 +141,6 @@ init_no_client_sni(void)
                 NULL);
         if (major_status != GSS_S_COMPLETE)
         {
-            why = "inquire_context";
             result = false;
 
             goto fail;
@@ -159,7 +154,6 @@ init_no_client_sni(void)
 
         if (major_status != GSS_S_COMPLETE)
         {
-            why = "gss_compare_name";
             result = false;
         }
     }
@@ -231,7 +225,6 @@ init_no_server_sni(void)
     bool                                result = true;
     int                                 name_equal = false;
     OM_uint32                           ignore_minor_status = 0;
-    const char                         *why = "";
 
     major_status = gss_import_name(
             &minor_status,
@@ -245,7 +238,6 @@ init_no_server_sni(void)
 
     if (major_status != GSS_S_COMPLETE)
     {
-        why = "gss_import_name";
         result = false;
         goto fail;
     }
@@ -272,7 +264,6 @@ init_no_server_sni(void)
 
         if (GSS_ERROR(major_status))
         {
-            why = "gss_init_sec_context";
             result = false;
             break;
         }
@@ -297,7 +288,6 @@ init_no_server_sni(void)
 
             if (GSS_ERROR(major_status))
             {
-                why = "accept_sec_context";
                 result = false;
             }
         }
@@ -318,7 +308,6 @@ init_no_server_sni(void)
                 NULL);
         if (major_status != GSS_S_COMPLETE)
         {
-            why = "inquire_context";
             result = false;
 
             goto fail;
@@ -332,7 +321,6 @@ init_no_server_sni(void)
 
         if (major_status != GSS_S_COMPLETE)
         {
-            why = "gss_compare_name";
             result = false;
         }
     }
@@ -418,7 +406,6 @@ init_sni1(void)
     bool                                result = true;
     int                                 name_equal = false;
     OM_uint32                           ignore_minor_status = 0;
-    const char                         *why = "";
 
     major_status = gss_set_sec_context_option(
             &minor_status,
@@ -431,7 +418,6 @@ init_sni1(void)
             });
     if (major_status != GSS_S_COMPLETE)
     {
-        why = "gss_set_sec_context_option";
         result = false;
 
         goto fail;
@@ -449,7 +435,6 @@ init_sni1(void)
 
     if (major_status != GSS_S_COMPLETE)
     {
-        why = "gss_import_name";
         result = false;
         goto fail;
     }
@@ -476,7 +461,6 @@ init_sni1(void)
 
         if (GSS_ERROR(major_status))
         {
-            why = "gss_init_sec_context";
             result = false;
             break;
         }
@@ -501,7 +485,6 @@ init_sni1(void)
 
             if (GSS_ERROR(major_status))
             {
-                why = "accept_sec_context";
                 result = false;
             }
         }
@@ -522,7 +505,6 @@ init_sni1(void)
                 NULL);
         if (major_status != GSS_S_COMPLETE)
         {
-            why = "inquire_context";
             result = false;
 
             goto fail;
@@ -536,7 +518,6 @@ init_sni1(void)
 
         if (major_status != GSS_S_COMPLETE)
         {
-            why = "gss_compare_name";
             result = false;
         }
     }
@@ -621,7 +602,6 @@ init_sni_wildcard(void)
     bool                                result = true;
     int                                 name_equal = false;
     OM_uint32                           ignore_minor_status = 0;
-    const char                         *why = "";
 
     major_status = gss_set_sec_context_option(
             &minor_status,
@@ -634,7 +614,6 @@ init_sni_wildcard(void)
             });
     if (major_status != GSS_S_COMPLETE)
     {
-        why = "gss_set_sec_context_option";
         result = false;
 
         goto fail;
@@ -652,7 +631,6 @@ init_sni_wildcard(void)
 
     if (major_status != GSS_S_COMPLETE)
     {
-        why = "gss_import_name";
         result = false;
         goto fail;
     }
@@ -679,7 +657,6 @@ init_sni_wildcard(void)
 
         if (GSS_ERROR(major_status))
         {
-            why = "gss_init_sec_context";
             result = false;
             break;
         }
@@ -704,7 +681,6 @@ init_sni_wildcard(void)
 
             if (GSS_ERROR(major_status))
             {
-                why = "accept_sec_context";
                 result = false;
             }
         }
@@ -725,7 +701,6 @@ init_sni_wildcard(void)
                 NULL);
         if (major_status != GSS_S_COMPLETE)
         {
-            why = "inquire_context";
             result = false;
 
             goto fail;
@@ -739,7 +714,6 @@ init_sni_wildcard(void)
 
         if (major_status != GSS_S_COMPLETE)
         {
-            why = "gss_compare_name";
             result = false;
         }
     }
@@ -822,9 +796,7 @@ init_sni_inquire_servername(void)
     gss_buffer_desc                     init_generated_token = {0};
     gss_buffer_desc                     accept_generated_token = {0};
     bool                                result = true;
-    int                                 name_equal = false;
     OM_uint32                           ignore_minor_status = 0;
-    const char                         *why = "";
     char                                wildcard_name[] = "wildcard.example.globus.org";
 
     major_status = gss_set_sec_context_option(
@@ -838,7 +810,6 @@ init_sni_inquire_servername(void)
             });
     if (major_status != GSS_S_COMPLETE)
     {
-        why = "gss_set_sec_context_option";
         result = false;
 
         goto fail;
@@ -856,7 +827,6 @@ init_sni_inquire_servername(void)
 
     if (major_status != GSS_S_COMPLETE)
     {
-        why = "gss_import_name";
         result = false;
         goto fail;
     }
@@ -883,7 +853,6 @@ init_sni_inquire_servername(void)
 
         if (GSS_ERROR(major_status))
         {
-            why = "gss_init_sec_context";
             result = false;
             break;
         }
@@ -908,7 +877,6 @@ init_sni_inquire_servername(void)
 
             if (GSS_ERROR(major_status))
             {
-                why = "accept_sec_context";
                 result = false;
             }
         }
@@ -926,7 +894,6 @@ init_sni_inquire_servername(void)
                 &data_set);
         if (major_status != GSS_S_COMPLETE)
         {
-            why = "inquire_sec_context_by_oid";
             result = false;
 
             goto fail;
@@ -934,7 +901,6 @@ init_sni_inquire_servername(void)
 
         if (data_set->count != 1)
         {
-            why = "data_set->count != 1";
             result = false;
             goto fail;
         }
@@ -943,7 +909,6 @@ init_sni_inquire_servername(void)
                     wildcard_name,
                     data_set->elements[0].length) != 0)
         {
-            why = "strncmp";
             result = false;
             goto fail;
         }
@@ -1033,7 +998,6 @@ init_sni_fail(void)
     gss_buffer_desc                     accept_generated_token = {0};
     bool                                result = false;
     OM_uint32                           ignore_minor_status = 0;
-    const char                         *why = "";
 
     major_status = gss_set_sec_context_option(
             &minor_status,
@@ -1046,7 +1010,6 @@ init_sni_fail(void)
             });
     if (major_status != GSS_S_COMPLETE)
     {
-        why = "gss_set_sec_context_option";
         result = false;
 
         goto fail;
@@ -1064,7 +1027,6 @@ init_sni_fail(void)
 
     if (major_status != GSS_S_COMPLETE)
     {
-        why = "gss_import_name";
         result = false;
         goto fail;
     }
@@ -1091,7 +1053,6 @@ init_sni_fail(void)
 
         if (GSS_ERROR(major_status))
         {
-            why = "gss_init_sec_context";
             result = true;
             break;
         }
@@ -1116,7 +1077,6 @@ init_sni_fail(void)
 
             if (GSS_ERROR(major_status))
             {
-                why = "accept_sec_context";
                 result = true;
                 break;
             }
@@ -1176,6 +1136,190 @@ fail:
 }
 /* init_sni_fail() */
 
+static
+bool
+init_environment(void)
+{
+    OM_uint32                           major_status = GSS_S_COMPLETE;
+    OM_uint32                           minor_status = GLOBUS_SUCCESS;
+    gss_ctx_id_t                        init_context = GSS_C_NO_CONTEXT;
+    gss_ctx_id_t                        accept_context = GSS_C_NO_CONTEXT;
+    gss_name_t                          target_name = GSS_C_NO_NAME;
+    gss_name_t                          peer_name = GSS_C_NO_NAME;
+    gss_buffer_desc                     init_generated_token = {0};
+    gss_buffer_desc                     accept_generated_token = {0};
+    bool                                result = true;
+    int                                 name_equal = false;
+    OM_uint32                           ignore_minor_status = 0;
+    char                               *old_vhost_env = NULL;
+
+    old_vhost_env = getenv("X509_VHOST_CRED_DIR");
+    globus_libc_setenv("X509_VHOST_CRED_DIR", "vhostdir", 1);
+
+    major_status = gss_import_name(
+        &minor_status,
+        &(gss_buffer_desc)
+        {
+            .value = "wildcard.example.globus.org",
+            .length = strlen("wildcard.example.globus.org"),
+        },
+        GLOBUS_GSS_C_NT_HOST_IP,
+        &target_name);
+
+    if (major_status != GSS_S_COMPLETE)
+    {
+        result = false;
+        goto fail;
+    }
+    do
+    {
+        major_status = gss_init_sec_context(
+            &minor_status,
+            GSS_C_NO_CREDENTIAL,
+            &init_context,
+            target_name,
+            GSS_C_NO_OID,
+            0,
+            0,
+            GSS_C_NO_CHANNEL_BINDINGS,
+            &accept_generated_token,
+            NULL,
+            &init_generated_token,
+            NULL,
+            NULL);
+
+        gss_release_buffer(
+                &ignore_minor_status,
+                &accept_generated_token);
+
+        if (GSS_ERROR(major_status))
+        {
+            result = false;
+            break;
+        }
+
+        if (init_generated_token.length > 0)
+        {
+            major_status = gss_accept_sec_context(
+                &minor_status,
+                &accept_context,
+                GSS_C_NO_CREDENTIAL,
+                &init_generated_token,
+                GSS_C_NO_CHANNEL_BINDINGS,
+                NULL,
+                NULL,
+                &accept_generated_token,
+                NULL,
+                NULL,
+                NULL);
+            gss_release_buffer(
+                    &ignore_minor_status,
+                    &init_generated_token);
+
+            if (GSS_ERROR(major_status))
+            {
+                result = false;
+            }
+        }
+    }
+    while (major_status == GSS_S_CONTINUE_NEEDED);
+
+    if (major_status == GSS_S_COMPLETE)
+    {
+        major_status = gss_inquire_context(
+            &minor_status,
+            init_context,
+            NULL,
+            &peer_name,
+            NULL,
+            NULL,
+            NULL,
+            NULL,
+            NULL);
+        if (major_status != GSS_S_COMPLETE)
+        {
+            result = false;
+
+            goto fail;
+        }
+
+        major_status = gss_compare_name(
+            &minor_status,
+            target_name,
+            peer_name,
+            &name_equal);
+
+        if (major_status != GSS_S_COMPLETE)
+        {
+            result = false;
+        }
+    }
+
+fail:
+    if (major_status != GSS_S_COMPLETE)
+    {
+        globus_gsi_gssapi_test_print_error(
+                stderr,
+                major_status,
+                minor_status);
+    }
+
+    if (init_context != GSS_C_NO_CONTEXT)
+    {
+        gss_delete_sec_context(
+            &ignore_minor_status,
+            &init_context,
+            NULL);
+    }
+    if (accept_context != GSS_C_NO_CONTEXT)
+    {
+        gss_delete_sec_context(
+            &ignore_minor_status,
+            &accept_context,
+            NULL);
+    }
+    if (peer_name != GSS_C_NO_NAME)
+    {
+        gss_release_name(
+            &ignore_minor_status,
+            &peer_name);
+    }
+    if (init_generated_token.length != 0)
+    {
+        gss_release_buffer(
+            &ignore_minor_status,
+            &init_generated_token);
+    }
+    if (accept_generated_token.length != 0)
+    {
+        gss_release_buffer(
+            &ignore_minor_status,
+            &accept_generated_token);
+    }
+    if (target_name != GSS_C_NO_NAME)
+    {
+        gss_release_name(
+            &minor_status,
+            &target_name);
+    }
+    if (target_name != GSS_C_NO_NAME)
+    {
+        gss_release_name(
+            &minor_status,
+            &target_name);
+    }
+
+    if (old_vhost_env == NULL)
+    {
+        globus_libc_unsetenv("X509_VHOST_CRED_DIR");
+    }
+    else
+    {
+        globus_libc_setenv("X509_VHOST_CRED_DIR", old_vhost_env, 1);
+    }
+    return result;
+}
+
 #define TEST_CASE_INITIALIZER(x) {x,#x}
 int
 main(int argc, char *argv[])
@@ -1191,6 +1335,7 @@ main(int argc, char *argv[])
         TEST_CASE_INITIALIZER(init_sni_wildcard),
         TEST_CASE_INITIALIZER(init_sni_inquire_servername), 
         TEST_CASE_INITIALIZER(init_sni_fail),
+        TEST_CASE_INITIALIZER(init_environment),
     };
     char                               *default_cert = getenv("X509_USER_CERT");
     char                               *default_key = getenv("X509_USER_KEY");
@@ -1213,8 +1358,8 @@ main(int argc, char *argv[])
         }
         else
         {
-            certfile = getenv ("X509_USER_CERT");
-            keyfile = getenv ("X509_USER_KEY");
+            certfile = getenv("X509_USER_CERT");
+            keyfile = getenv("X509_USER_KEY");
         }
 
         major_status = gss_acquire_cred(
