@@ -6,7 +6,7 @@ Name:		globus-gssapi-gsi
 %global apache_license ASL 2.0
 %endif
 %global _name %(tr - _ <<< %{name})
-Version:	13.0
+Version:	13.1
 Release:	1%{?dist}
 Vendor:	Globus Support
 Summary:	Globus Toolkit - GSSAPI library
@@ -179,6 +179,9 @@ rm -rf $RPM_BUILD_ROOT
 %{_mandir}/man3/*
 
 %changelog
+* Tue Sep 12 2017 Globus Toolkit <support@globus.org> - 13.1-1
+- use X509_VHOST_CRED_DIR if set when accepting
+
 * Tue Sep 05 2017 Globus Toolkit <support@globus.org> - 13.0-1
 - Add SNI vhost cred dir support
 - Add optional ALPN processing
