@@ -1,3 +1,9 @@
+globus-gssapi-gsi (13.1-1+gt6.@distro@) @distro@; urgency=low
+
+  * use X509_VHOST_CRED_DIR if set when accepting
+
+ -- Globus Toolkit <support@globus.org>  Tue, 12 Sep 2017 16:18:13 -0400
+
 globus-gssapi-gsi (13.0-1+gt6.@distro@) @distro@; urgency=low
 
   * Add SNI vhost cred dir support
